# gpx-track-analyser

./: .gitignore  LICENSE  README.md  analyze_track.py  codechecker.sh  pyproject.toml  requirements.txt
resources/: activity_with_splits.gpx  activity_with_splits.json  track4.gpx  track5.gpx  track6.gpx  track6_full.gpx  track_without_time.gpx
src/: Extension.py  elevation_track_analyzer.py  entry_point.py  gpx_track_analyzer.py  power_track_analyzer.py  tcx_to_gpx.py  track_analyzer.py  utils.py  velocity_track_analyzer.py
test/: test_track_analyzer.py  test_velocity_track_analyzer.py
